# cli_t

./: .gitignore  CMakeLists.txt  README.md  hello.clb
binary/: help.cpp
cliba/include/: cliba.hpp  stdcliba.hpp
cliba/src/: cliba.cpp  stdcliba  stdcliba.cpp
cliba/src/output/: stdcliba
home/: welcome.txt
include/: commandline.hpp  var_parser.hpp  variable.hpp
src/: cli.cpp  commandline.cpp  vparser.cpp
